--- a/css/style.css
+++ b/css/style.css
@@ -154,8 +154,10 @@ font-style: normal;
 }
 
 .first-section {
-    background-color: #2e2f42;
+    background-color: #2E2F42 70%;
 padding: 188px 0;
+background-image: url("../images/people-office\ 1.jpg");
+    background-size: cover;
 }
 
 
@@ -165,6 +167,7 @@ display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    
 
 }
 .first-section-text {
@@ -196,10 +199,12 @@ button:hover {
 }
 button:focus {
     background-color: #404BBF;
+
 }
 
 .container-section {
     display: flex;
+
    
 }
 .features-section-container{
