--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,9 @@ display: flex;
 .header-section-class{
 border-bottom: 1px solid #e7e9fc;
 margin: 0 auto;
+box-shadow:0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .nav-container{
     display: flex;
@@ -207,6 +210,7 @@ button:focus {
 
    
 }
+
 .features-section-container{
 
     padding: 120px 0;
