--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,21 @@ span {
     padding-top: 24px;
         padding-bottom: 24px;
         font-size: 16px;
+        transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        
+}
+#header-studio-text{
+    position: relative;
+    color: #404bbf;
+}
+*::after::content{
+width: 100%;
+position: absolute;
+left: 0;
+bottom: -1px;
+height: 4px;
+background-color: #404bbf;
+border-radius: 2px;
 }
 nav a:hover {
     color: #404bbf;
@@ -148,6 +163,7 @@ font-style: normal;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-list :hover {
     color: #404bbf;
