--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,16 @@ box-shadow:0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 1px 6px rgba(46, 47, 66, 0.08);
 }
+.header-section-class::after{
+    width:100%;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+}
+
 .nav-container{
     display: flex;
     flex-direction: row;
@@ -135,15 +145,7 @@ span {
     position: relative;
     color: #404bbf;
 }
-*::after::content{
-width: 100%;
-position: absolute;
-left: 0;
-bottom: -1px;
-height: 4px;
-background-color: #404bbf;
-border-radius: 2px;
-}
+
 nav a:hover {
     color: #404bbf;
    
