div after açıldı

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,8 @@ box-shadow:0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 1px 6px rgba(46, 47, 66, 0.08);
 }
-.header-section-class::after{
+div::after {
+    content:"";
     width:100%;
     position: absolute;
     left: 0;
