--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,7 @@ span {
         
 }
 #header-studio-text{
+
     position: relative;
     color: #404bbf;
    
@@ -180,12 +181,13 @@ font-style: normal;
 
 .first-section {
     background-color: #2E2F42 70%;
-padding: 188px 0;
-background-image: url("../images/people-office\ 1.jpg");
+    padding: 188px 0;
+    background-image:linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/people-office\ 1.jpg");
     background-size: cover;
+    max-width: 1440px;
+    background-repeat: no-repeat;
+    background-position: center;
 }
-
-
 
 .second-container{
 display: flex;
@@ -193,7 +195,6 @@ display: flex;
     align-items: center;
     justify-content: center;
     
-
 }
 .first-section-text {
     font-size: 56px;
@@ -217,6 +218,7 @@ display: flex;
     height: 56px;
     border: none;
     border-radius: 4px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 button:hover {
