--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@ font-style: normal;
 .first-section {
     background-color: #2E2F42 70%;
     padding: 188px 0;
-    background-image:linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/people-office\ 1.jpg");
+    background-image:linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/office-1.jpg");
     background-size: cover;
     max-width: 1440px;
     background-repeat: no-repeat;
