--- a/css/style.css
+++ b/css/style.css
@@ -246,20 +246,25 @@ align-items: center;
     gap: 24px;
  
 }
-.icons-container svg{
+.icons-container.first-icons{
   display: flex;  
   justify-content: center;
   align-items: center;
   height: 112px;
-  background-color: #f4f4fd;
-  border-radius: 4px;
-  border: 1px solid #8e8f99;
-  margin-bottom: 8px;
+background-color: #f4f4fd;
 
 }
+.icons-container svg{
+border: 1px solid #8e8f99;
+border-radius: 4px;
+margin-bottom: 8px;
+background-color: #f4f4fd;
+}
+
 .first-icons{
-    width: 64;
-    height: 64;
+    width: 64px;
+    height: 64px;
+
 }
 ul.features-section-container-header{
     list-style-type: none;
