--- a/css/style.css
+++ b/css/style.css
@@ -246,12 +246,12 @@ align-items: center;
     gap: 24px;
  
 }
-.icons-container.first-icons{
+.icons-container{
   display: flex;  
   justify-content: center;
   align-items: center;
-  height: 112px;
-background-color: #f4f4fd;
+ 
+
 
 }
 .icons-container svg{
@@ -259,6 +259,7 @@ border: 1px solid #8e8f99;
 border-radius: 4px;
 margin-bottom: 8px;
 background-color: #f4f4fd;
+height: 112px;
 }
 
 .first-icons{
