--- a/css/style.css
+++ b/css/style.css
@@ -330,6 +330,7 @@ ul.features-section-container-header{
 }
 .team-card-border-container{
     padding: 32px 0;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-card-container .team-sub {
     text-align: center;
@@ -372,8 +373,13 @@ ul.features-section-container-header{
     background-color: #FFFFFF;
     width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
+    transform: translateY(0%);
 }
-
+.team-card:hover{
+    box-shadow:0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+}
 
 .portfolio-container{
     padding-top: 120px;
@@ -430,6 +436,7 @@ ul.features-section-container-header{
     border: 1px solid #E7E9FC;
     border-top: none;
     margin-bottom: 8px;
+    
 }
 .portfolio-header {
     font-size: 36px;
