--- a/css/style.css
+++ b/css/style.css
@@ -379,21 +379,28 @@ ul.features-section-container-header{
 .social-media-icons{
     display: flex;
     justify-content: center;
-    gap: 24px;
+   
 }
-.social-media-icons-elements{
+.icons-gap-settings{
+    gap: 24px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.social-media-icons-elements.social-media-icon-list{
     width: 40px;
     height: 40px;
 
 }
-li.social-media-icon-list{
+.social-media-icon-list{
     display: flex;
     justify-content: center;
     align-items: center;
+    
+}
+.icons-settings{
     width: 100%;
-    height: 100%;
-    background-color:#4d5ae5;
-    border-radius: 50%;
+        height: 100%;
+        background-color: #4d5ae5;
+        border-radius: 50%;
 }
 .social-media-icon-list:hover{
     background-color: #404bbf;
