--- a/css/style.css
+++ b/css/style.css
@@ -383,24 +383,32 @@ ul.features-section-container-header{
 }
 .icons-gap-settings{
     gap: 24px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
+
 .social-media-icons-elements{
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+.icons-width-settings{
     width: 40px;
     height: 40px;
-
 }
 .social-media-icon-list{
     display: flex;
     justify-content: center;
     align-items: center;
     
+    
+}
+.icons-color-settings{
+    background-color: #4d5ae5;
+        border-radius: 50%;
 }
 .icons-settings{
     width: 100%;
-        height: 100%;
-        background-color: #4d5ae5;
-        border-radius: 50%;
+    height: 100%;
+   
 }
 .social-media-icon-list:hover{
     background-color: #404bbf;
@@ -409,7 +417,7 @@ ul.features-section-container-header{
     background-color: #404bbf;
 }
 .social-media-icon-section{
-    color: #f4f4fd;
+    fill: #f4f4fd;
 
 }
 .portfolio-container{
