--- a/css/style.css
+++ b/css/style.css
@@ -453,6 +453,7 @@ box-shadow:
 }
 .portfolio-card-borders{
     width: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 .portfolio-card-borders:nth-child(4){
@@ -477,7 +478,7 @@ box-shadow:
     border: 1px solid #E7E9FC;
     border-top: none;
     margin-bottom: 8px;
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 .portfolio-header {
     font-size: 36px;
@@ -504,7 +505,7 @@ box-shadow:
 
 }
 
-.portfolio-text:hover{
+.portfolio-card-borders p:hover{
 
     transform: translateY(0%);
 }
