dördüncü bölüm ayarları devam

--- a/css/style.css
+++ b/css/style.css
@@ -437,6 +437,10 @@ ul.features-section-container-header{
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+.portfolio-card-border-containers.portfolio-text:hover{
+    transform: translateY(0%);
+
+}
 .portfolio-cards-main-container li{
     list-style-type: none;
     border: 1px;
@@ -504,7 +508,28 @@ box-shadow:
    letter-spacing: 0.02em;
 
 }
+.image-container{
+    position: relative;
+    overflow: hidden;
 
+}
+.text-in-image{
+    position:absolute;
+    top:0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color:#f4f4fd;
+    padding: 40px 32px;
+    background-color: #4d5ae5;
+    height: 100%;
+    width: 100%;
+    
+}
+.text-hover:hover{
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .footer-main-container{
   
