--- a/css/style.css
+++ b/css/style.css
@@ -522,13 +522,17 @@ box-shadow:
     color:#f4f4fd;
     padding: 40px 32px;
     background-color: #4d5ae5;
-    height: 100%;
-    width: 100%;
+    
     
 }
 .text-hover:hover{
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+}
+.text-settings{
+    height: 100%;
+    width: 100%;
 }
 
 .footer-main-container{
