--- a/css/style.css
+++ b/css/style.css
@@ -525,7 +525,7 @@ box-shadow:
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
-.text-hover:hover{
+.text-in-image:hover{
     transform: translateY(100%);
 
     
