--- a/css/style.css
+++ b/css/style.css
@@ -520,13 +520,12 @@ ul.features-section-container-header{
     letter-spacing: 0.02em;
     color:#f4f4fd;
     padding: 40px 32px;
-    background-color: #4d5ae5;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-   
+    background-color: #4d5ae5;
 }
-.image-container p:hover{
+.text-hover:hover{
     transform: translateY(100%);
-
+    
     
 }
 .text-settings{
