--- a/css/style.css
+++ b/css/style.css
@@ -523,7 +523,7 @@ ul.features-section-container-header{
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #4d5ae5;
 }
-.text-hover:hover{
+.portfolio-card-borders:hover .text-in-image{
     transform: translateY(100%);
     
     
