--- a/css/style.css
+++ b/css/style.css
@@ -528,10 +528,10 @@ ul.features-section-container-header{
 }
 
 .footer-main-container{
-  
+margin-right: 120px;
 margin-bottom: 16px;
 padding-left: 15px;
-    padding-right: 15px;
+padding-right: 15px;
 
 }
 
@@ -565,7 +565,49 @@ span.studio-second {
   letter-spacing: 0.02em;
   max-width: 264px;
 }
+.footer-container-for-all{
+display: flex;
+align-items: baseline;
+}
 
+.social-media-text{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color:#FFFFFF;
+    margin-bottom: 16px;
+
+}
+.footer-icons{
+    display: flex;
+    gap: 16px;
+
+}
+.footer-icons-settings{
+    width: 40px;
+    height: 40px;
+
+}
+.footer-social-media-icon-list{
+    width: 100%;
+    height: 100%;
+    background-color:#4d5ae5;
+    border-radius:50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+.footer-social-media-icon-list:hover{
+    background-color: #31d0aa;
+}
+.footer-social-media-icon-list:active{
+    background-color: #31d0aa;
+}
+.footer-social-media-icons-settings{
+   fill: #f4f4fd;
+}
 img {
     display: block;
 }
