--- a/css/style.css
+++ b/css/style.css
@@ -528,7 +528,7 @@ ul.features-section-container-header{
 }
 
 .footer-main-container{
-
+margin-right: 120px;
 margin-bottom: 16px;
 padding-left: 15px;
 padding-right: 15px;
