--- a/css/style.css
+++ b/css/style.css
@@ -568,6 +568,7 @@ span.studio-second {
 .footer-container-for-all{
 display: flex;
 align-items: baseline;
+
 }
 .social-media-container{
     margin-right: 120px;
@@ -586,7 +587,8 @@ align-items: baseline;
 .footer-icons{
     display: flex;
     gap: 16px;
-    margin-right: 120px;
+     margin-right: 120px;
+  
   
 }
 .footer-icons-settings{
@@ -597,17 +599,24 @@ align-items: baseline;
 .footer-social-media-icon-list{
     width: 100%;
     height: 100%;
-    background-color:#4d5ae5;
-    border-radius:50%;
+    
+    
+    
+}
+.footer-connect-icons{
     display: flex;
     align-items: center;
     justify-content: center;
-
+    
 }
-.footer-social-media-icon-list:hover{
+.footer-icons-elements{
+background-color: #4d5ae5;
+    border-radius: 50%;
+}
+.footer-icons:hover .footer-icons-settings{
     background-color: #31d0aa;
 }
-.footer-social-media-icon-list:active{
+.footer-icons:active .footer-icons-settings{
     background-color: #31d0aa;
 }
 .footer-social-media-icons-settings{
