--- a/css/style.css
+++ b/css/style.css
@@ -592,8 +592,8 @@ align-items: baseline;
   
 }
 .footer-icons-settings{
-    width: 40px;
-    height: 40px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 
 }
 .footer-social-media-icon-list{
