--- a/css/style.css
+++ b/css/style.css
@@ -477,7 +477,7 @@ ul.features-section-container-header{
     padding: 32px 16px;
     border: 1px solid #E7E9FC;
     border-top: none;
-    margin-bottom: 8px;
+   
 
 }
 .portfolio-header {
@@ -520,11 +520,12 @@ ul.features-section-container-header{
     color:#f4f4fd;
     padding: 40px 32px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translateY(100%);
     background-color: #4d5ae5;
     
 }
 .portfolio-card-borders:hover .text-in-image{
-    transform: translateY(100%); 
+    transform: translateY(0%); 
 }
 
 .footer-main-container{
@@ -532,6 +533,7 @@ margin-bottom: 16px;
 padding-left: 15px;
 padding-right: 15px;
 gap: 16px;
+margin-right: 120px;
 
 }
 
@@ -602,12 +604,13 @@ background: #2e2f42;
     justify-content: center;
     background-color: #4d5ae5;
     border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .footer-social-media-icon-list:hover {
     background-color: #31d0aa;
 }
-.footer-social-media-icon-list:active {
+.footer-social-media-icon-list:focus {
     background-color: #31d0aa;
 }
 .footer-social-media-icons-settings{
